# dlairflow

./: .gitignore  .readthedocs.yml  LICENSE.md  README.md  setup.cfg
.github/workflows/: CI.yml
dlairflow/: __init__.py  load.py  meta.py  postgresql.py  scripts.py  util.py
dlairflow/test/: create_fits_files.py  test_load.py  test_meta.py  test_meta_tasks.py  test_postgresql.py  test_scripts.py  test_util.py
dlairflow/test/t/: test_validate_data_files.csv  test_validate_data_files.fits  test_validate_data_files.yml  test_validate_data_files_incompatible_type.csv  test_validate_data_files_incompatible_type.fits  test_validate_data_files_reordered.csv  test_validate_data_files_reordered.fits
docs/: api.rst  changes.rst  conf.py  index.rst
docs/development-plan/: README.md  development-plan.org
