[metadata]
name = dlairflow
version = attr: dlairflow.__version__
author = Astro Data Lab
author_email = datalab@noirlab.edu
license = BSD-3-Clause
license_files = LICENSE.md
url = https://github.com/astro-datalab/dlairflow
description = Reusable code components for building Apache Airflow DAGs.
long_description = file: README.md
long_description_content_type = text/markdown
edit_on_github = True
github_project = astro-datalab/dlairflow
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Framework :: Apache Airflow
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: System :: Software Distribution
    Topic :: Utilities

[options]
zip_safe = True
packages = find:
include_package_data = True
python_requires = >=3.9
# setup_requires = setuptools_scm
install_requires =
    apache-airflow
    apache-airflow-providers-postgres
# scripts =
#     bin/shell_script.sh

[options.entry_points]
console_scripts =
    clean_dlairflow_sql_templates = dlairflow.scripts:clean_dlairflow_sql_templates

[options.extras_require]
test =
    pytest
coverage =
    pytest-cov
    coveralls
doc =
    Sphinx
    sphinx-rtd-theme>1.2

# [options.package_data]
# dlairflow = data/*
# dlairflow.test = t/*

[options.packages.find]
exclude = .github/*

[coverage:run]
relative_files = True
source =
    dlairflow
omit =
    dlairflow/_version.py
    dlairflow/conftest*
    dlairflow/test/*
    */dlairflow/_version.py
    */dlairflow/conftest*
    */dlairflow/test/*

# [coverage:paths]
# source =
#     dlairflow/
#     */site-packages/dlairflow/

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[pycodestyle]
# See https://pycodestyle.readthedocs.io/en/latest/intro.html#configuration
# for details of these configuration options.
#
# These are normally ignored by default:
# ignore = E121, E123, E126, E133, E226, E241, E242, E704, W503, W504
#
# At this time, no styles are ignored.
#
# In addition this is not ignored, but modified by max-line-length:
# - E501 line too long (L > max-line-length characters)
max-line-length = 115
ignore =
